# port-mobile

./: .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  App.tsx  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  LinkPreview.md  NOTICE  README.md  SECURITY.md  app.json  azure-pipelines.yml  babel.config.js  eas.json  eslint.config.js  eslint.config.mjs  index.js  metro.config.js  package-lock.json  package.json  ready_all  tsconfig.json
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml
.github/workflows/: issue-auto-tags.yml  main.yml
Numberless/: app.json  package.json
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
assets/splashscreenAssets/: bootsplash_manifest.json
ios/: AppDelegate.h  AppDelegate.mm  AppDelegate.swift  GoogleService-Info.plist  Podfile  link-assets-manifest.json
ios/NativeProviders/: NativeCryptoModuleProvider.h  NativeCryptoModuleProvider.mm
ios/Numberless/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Numberless.xcodeproj/: project.pbxproj
ios/Numberless.xcworkspace/: contents.xcworkspacedata
ios/Port/: AppDelegate.mm  BootSplash.storyboard  Info.plist  LaunchScreen.storyboard  Port-Bridging-Header.h  Port.entitlements
ios/Port.xcodeproj/: project.pbxproj
ios/Port.xcworkspace/: contents.xcworkspacedata
ios/PortShare/: Info.plist  PortShare.entitlements  ShareViewController.swift
ios/PortTests/: PortTests.m
ios/portnse/: ExampleNotification.apns  Info.plist  NotificationService.swift
patches/: react-native-callkeep+4.3.16.patch  react-native-contacts+8.0.4.patch  react-native-create-thumbnail+1.6.4.patch  react-native-receive-sharing-intent+2.0.0.patch  react-native-snap-carousel+3.9.1.patch
shared/: CMakeLists.txt  README.md
shared/include/: NativeCryptoModule.h  NativeCryptoModule.hpp  aes256.h  aes256.hpp  aesgcm.hpp  commonhash.hpp  commonrand.hpp  ed25519.h  encoders.h  encoders.hpp  key_complications.hpp  pbencrypt.hpp  x25519.h  x25519.hpp  yap.hpp
shared/src/: NativeCryptoModule.cpp  aes256.cpp  aesgcm.cpp  commonhash.cpp  commonrand.cpp  ed25519.cpp  encoders.cpp  pbencrypt.cpp  x25519.cpp  yap.cpp
shared/tests/: encoder_tests.cpp  sanity_tests.cpp  vectorcmp.hpp  yap_tests.cpp
src/actions/: BundleReadHandshake.ts  BundleShownHandshake.ts  ConvertQRtoLink.ts  GetQRData.ts  InitialiseFCM.ts  InitialiseLineLinks.ts  InitialiseUserCrypto.ts  JoinApp.ts  initialiseTokenAuth.ts
src/components/: Accordion.tsx  AddMembersCard.tsx  BackButton.tsx  BackTopBar.tsx  BackupCard.tsx  BaseBottomsheet.tsx  BlockedCard.tsx  BlockedContactTile.tsx  CenterInformationModal.tsx  ChatBackground.tsx  CommonGroups.tsx  ComponentUtils.ts  CustomKeyboardAvoidingView.tsx  CustomModal.tsx  CustomStatusBar.tsx  DeleteChatButton.tsx  Description.tsx  DeveloperBox.tsx  DeviceUtils.tsx  DynamicColors.tsx  ErrorModal.tsx  GenericAvatar.tsx  GenericBottomsheet.tsx  GenericButton.tsx  GenericInput.tsx  GenericModal.tsx  GenericModalTopBar.tsx  GenericTopBar.tsx  GestureSafeAreaView.tsx  GradientScreenView.tsx  (+23 more)
(+1118 files in other folders)
